tests/valid/definite/BoolAssign_Valid_1.whiley
void System::main([string] args):
    bool x = true
    print str(x)
    x = false
    print str(x)
