tests/invalid/simple/List_CompileFail_6.whiley
void f(int x):
    [int] a 
    x = a
